# workflow-graph

./: .bazelignore  .gitignore  .npmignore  .npmrc  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE.bazel  angular.json  bazel-bin  bazel-out  bazel-testlogs  bazel-workflow-graph  defs.bzl  karma.conf.js  package.json  pnpm-lock.yaml  release.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.types.json
.github/workflows/: build_on_push.yml  on_push.yml
src/: BUILD.bazel  bazel_functions.bzl  index.html  index.ts  main.opensource.ts  main.prod.opensource.ts  polyfills.ts  rollup.config.js  screenshot_test.ts  tsconfig.opensource.json  types.ts
src/app/: BUILD.bazel  _colors.scss  app.component.ts  app.module.opensource.ts  app.module.ts  color_theme_loader.scss  color_theme_loader.spec.ts  color_theme_loader.ts  colors.scss  custom_overlay.ts  custom_overlay_container.ts  dag-state.service.provider.ts  dag-state.service.ts  data_types_internal.spec.ts  data_types_internal.ts  data_types_internal_test.ts  debounce_util.ts  directed_acyclic_graph.ng.html  directed_acyclic_graph.scss  directed_acyclic_graph.spec.ts  directed_acyclic_graph.ts  directed_acyclic_graph_raw.ng.html  directed_acyclic_graph_raw.scss  directed_acyclic_graph_raw.spec.ts  directed_acyclic_graph_raw.ts  directed_acyclic_graph_raw_test.ts  directed_acyclic_graph_test.ts  group_iteration_select.ng.html  group_iteration_select.scss  group_iteration_select.spec.ts  group_iteration_select.ts  group_iteration_select_filter.ng.html  group_iteration_select_filter.ts  i18n.ts  i18n_messages_internal.ts  icon_util.ts  icon_wrapper.ng.html  icon_wrapper.scss  icon_wrapper.ts  icons_module.ts  (+54 more)
src/app/a11y/: a11y_help_center.ng.html  a11y_help_center.scss  a11y_help_center.ts  shortcut.pipe.spec.ts  shortcut.pipe.ts  shortcut.service.spec.ts  shortcut.service.ts  shortcuts.ts
src/app/demo_page/: demo_page.ng.html  demo_page.scss  demo_page.spec.ts  demo_page.ts
src/app/demo_page/demo_datasets/: artifact_in_nested_loop.ts  edge_marker_styles.ts  expanded_group.ts  gigantic_graph.ts  recursive_graph.ts  shared.ts  single_node.ts
src/app/logger/: BUILD.bazel  dag_logger.ts
src/app/minimap/: minimap.ng.html  minimap.scss  minimap.spec.ts  minimap.ts
src/app/minimap/test_resources/: fake_data.ts  fake_data_expanded_groups.ts
src/app/test_resources/: BUILD.bazel  a11y_help_center_harness.ts  demo_page_harness.ts  directed_acyclic_graph_harness.ts  directed_acyclic_graph_raw_harness.ts  fake_data.ts  group_iteration_select_harness.ts  group_iteration_select_harness_internal.ts  minimap_harness.ts  node_harness.ts  node_state_badge_harness.ts  test_utils.ts  toolbar_harness.ts
src/example/: index.html
src/tools/: BUILD.bazel  ng.bzl  ngc.esbuild.ts  ts.bzl
