load("@io_bazel_rules_sass//:defs.bzl", "npm_sass_library", "sass_binary", "sass_library")
load("//src/tools:ng.bzl", "ng_project")

package(default_visibility = ["//visibility:public"])

ng_project(
    name = "node_spec",
    srcs = [
        "node_spec.ts",
    ],
    deps = [
        ":internals",
    ],
)

ng_project(
    name = "dag_state_service",
    srcs = [
        "dag-state.service.ts",
    ],
    deps = [
        ":internals",
        ":node_spec",
        "//:node_modules/@angular/core",
        "//:node_modules/@types/node",
        "//:node_modules/rxjs",
    ],
)

ng_project(
    name = "internals",
    srcs = [
        "data_types_internal.ts",
    ],
    deps = [],
)

ng_project(
    name = "icons_module",
    srcs = [
        "icons_module.ts",
    ],
    deps = [
        ":url_sanitizer",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/material",
        "//:node_modules/@angular/platform-browser",
        "//:node_modules/@types/node",
        "//:node_modules/@types/trusted-types",
        "//:node_modules/safevalues",
    ],
)

ng_project(
    name = "icon_util",
    srcs = [
        "icon_util.ts",
    ],
    deps = [
        ":i18n",
        ":icons_module",
        ":internals",
        ":node_spec",
    ],
)

ng_project(
    name = "icon_wrapper",
    srcs = [
        "icon_wrapper.ts",
    ],
    assets = [
        "icon_wrapper.ng.html",
        ":icon_wrapper_sass",
    ],
    deps = [
        "//:node_modules/@angular/material",
        "//:node_modules/@types/node",
    ],
)

sass_binary(
    name = "icon_wrapper_sass",
    src = "icon_wrapper.scss",
    output_name = "icon_wrapper.css",
    sourcemap = False,
    deps = [],
)

ng_project(
    name = "node",
    srcs = [
        "node.ts",
    ],
    assets = [
        "node.ng.html",
        ":node_sass",
    ],
    deps = [
        ":dag_state_service",
        ":group_iteration_select",
        ":icon_util",
        ":icon_wrapper",
        ":icons_module",
        ":internals",
        ":node_ref_badge",
        ":node_spec",
        "//:node_modules/@angular/material",
        "//:node_modules/lodash",
        "//:node_modules/rxjs",
    ],
)

sass_binary(
    name = "node_sass",
    src = "node.scss",
    output_name = "node.css",
    sourcemap = False,
    deps = [":mixins"],
)

ng_project(
    name = "ng_var_directive",
    srcs = [
        "ng_var_directive.ts",
    ],
    deps = [
        "//:node_modules/@angular/core",
    ],
)

ng_project(
    name = "resize_monitor",
    srcs = [
        "resize_monitor_directive.ts",
    ],
    deps = [
        "//:node_modules/@angular/core",
        "//:node_modules/@types/node",
        "//:node_modules/rxjs",
    ],
)

ng_project(
    name = "toolbar",
    srcs = [
        "toolbar.ts",
    ],
    assets = [
        "toolbar.ng.html",
        ":toolbar_sass",
    ],
    deps = [
        ":icon_util",
        ":icon_wrapper",
        ":icons_module",
        ":internals",
        ":ng_var_directive",
        ":node_spec",
        "//src/app/logger",
        "//:node_modules/@angular/forms",
        "//:node_modules/@angular/material",
        "//:node_modules/lodash",
    ],
)

sass_binary(
    name = "toolbar_sass",
    src = "toolbar.scss",
    output_name = "toolbar.css",
    sourcemap = False,
    deps = [":mixins"],
)

ng_project(
    name = "scaffold",
    srcs = [
        "scaffold.ts",
    ],
    assets = [
        "scaffold.ng.html",
        ":scaffold_sass",
    ],
    deps = [
        ":directed_acyclic_graph",
        ":internals",
        ":toolbar",
        "//src/app/logger",
    ],
)

sass_binary(
    name = "scaffold_sass",
    src = "scaffold.scss",
    output_name = "scaffold.css",
    sourcemap = False,
)

ng_project(
    name = "sidebar",
    srcs = [
        "sidebar.ts",
    ],
    assets = [
        "sidebar.ng.html",
        ":sidebar_sass",
    ],
    deps = [
        ":internals",
        "//:node_modules/@angular/core",
        "//:node_modules/@types/node",
    ],
)

sass_binary(
    name = "sidebar_sass",
    src = "sidebar.scss",
    output_name = "sidebar.css",
    sourcemap = False,
    deps = [
        ":mixins",
    ],
)

ng_project(
    name = "workflow_graph_wrapper",
    srcs = [
        "workflow_graph_wrapper.ts",
    ],
    assets = [
      ":material_theme"
    ],
    deps = [
        ":directed_acyclic_graph",
        ":node_spec",
        ":scaffold",
        ":toolbar",
        "//src/app/logger",
        "//:node_modules/@angular/common",
    ],
)

npm_sass_library(
    name = "angular_material_sass_deps",
    deps = ["//:node_modules/@angular/material"],
)

sass_binary(
    name = "material_theme",
    src = "material_theme_npm.scss",
    include_paths = [
        "external/npm/node_modules",
    ],
    output_name = "material_theme.css",
    sourcemap = False,
    deps = [":angular_material_sass_deps"],
)

ng_project(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.opensource.ts",
    ],
    assets = [
    ],
    deps = [
        ":internals",
        ":url_sanitizer",
        ":workflow_graph_wrapper",
        "//src/app/test_resources",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/elements",
        "//:node_modules/@angular/platform-browser",
        "//:node_modules/@types/node",
        "//:node_modules/rxjs",
    ],
)

ng_project(
    name = "url_sanitizer",
    srcs = [
        "url_sanitizer.opensource.ts",
        "url_sanitizer_types.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/platform-browser",
    ],
)

ng_project(
    name = "i18n",
    srcs = [
        "i18n.ts",
    ],
    deps = [],
)

ng_project(
    name = "directed_acyclic_graph",
    srcs = [
        "directed_acyclic_graph.ts",
    ],
    assets = [
        "directed_acyclic_graph.ng.html",
        ":directed_acyclic_graph_sass",
    ],
    deps = [
        ":dag_state_service",
        ":directed_acyclic_graph_raw",
        ":icons_module",
        ":internals",
        ":node_spec",
        ":resize_monitor",
        ":sidebar",
        "//src/app/logger",
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@types/dagre",
        "//:node_modules/dagre",
        "//:node_modules/lodash",
        "//:node_modules/rxjs",
    ],
)

sass_binary(
    name = "directed_acyclic_graph_sass",
    src = "directed_acyclic_graph.scss",
    output_name = "directed_acyclic_graph.css",
    sourcemap = False,
    deps = [":mixins"],
)

ng_project(
    name = "directed_acyclic_graph_raw",
    srcs = [
        "directed_acyclic_graph_raw.ts",
    ],
    assets = [
        "directed_acyclic_graph_raw.ng.html",
        ":directed_acyclic_graph_raw_sass",
    ],
    deps = [
        ":dag_state_service",
        ":group_iteration_select",
        ":icon_util",
        ":icon_wrapper",
        ":icons_module",
        ":internals",
        ":node",
        ":node_ref_badge",
        ":node_spec",
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@types/dagre",
        "//:node_modules/dagre",
        "//:node_modules/lodash",
        "//:node_modules/rxjs",
    ],
)

sass_binary(
    name = "directed_acyclic_graph_raw_sass",
    src = "directed_acyclic_graph_raw.scss",
    output_name = "directed_acyclic_graph_raw.css",
    sourcemap = False,
    deps = [":mixins"],
)

sass_library(
    name = "mixins",
    srcs = ["mixins.scss"],
    visibility = ["//visibility:public"],
)

ng_project(
    name = "node_state_badge",
    srcs = [
        "node_state_badge.ts",
    ],
    assets = [
        "node_state_badge.ng.html",
        ":node_state_badge_sass",
    ],
    deps = [
        ":icon_util",
        ":icon_wrapper",
        ":internals",
    ],
)

sass_binary(
    name = "node_state_badge_sass",
    src = "node_state_badge.scss",
    output_name = "node_state_badge.css",
    sourcemap = False,
)

ng_project(
    name = "node_ref_badge",
    srcs = [
        "node_ref_badge.ts",
    ],
    assets = [
        "node_ref_badge.ng.html",
        ":node_ref_badge_sass",
    ],
    deps = [
        ":dag_state_service",
        ":icon_util",
        ":icon_wrapper",
        ":icons_module",
        ":internals",
        ":node_spec",
        "//:node_modules/rxjs",
    ],
)

sass_binary(
    name = "node_ref_badge_sass",
    src = "node_ref_badge.scss",
    output_name = "node_ref_badge.css",
    sourcemap = False,
    deps = [":mixins"],
)

ng_project(
    name = "group_iteration_select",
    srcs = [
        "group_iteration_select.ts",
    ],
    assets = [
        "group_iteration_select.ng.html",
        ":group_iteration_select_sass",
    ],
    deps = [
        ":dag_state_service",
        ":i18n",
        ":icon_util",
        ":icon_wrapper",
        ":icons_module",
        ":internals",
        ":node_spec",
        "//:node_modules/@angular/material",
        "//:node_modules/rxjs",
    ],
)

sass_binary(
    name = "group_iteration_select_sass",
    src = "group_iteration_select.scss",
    output_name = "group_iteration_select.css",
    sourcemap = False,
    deps = [":mixins"],
)
