load("//src/tools:ng.bzl", "ng_project")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

ng_project(
    name = "logger",
    srcs = ["dag_logger.ts"],
    deps = [
        "//:node_modules/@angular/core",
        "//:node_modules/@types/node",
        "//:node_modules/rxjs",
    ],
)
